--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 
-### ---------- Project Specific ---------- ###
+# Maintainer:   jeffskinnerbox@yahoo.com / www.jeffskinnerbox.me
+# Version:      1.1.0
+#
+# DESCRIPTION:
+# This file specifies intentionally untracked files that Git should ignore.
+#
+# Each line in this .gitignore file specifies a regular expression pattern
+# that, when matched, the coresponding file will NOT be include in Git processing.
 
 
-### ---------- General ---------- ###
+### --------------------------- Project Specific --------------------------- ###
+
+
+### ------------------------------- General -------------------------------- ###
 
 ### Compiled Source ###
 *.pyc
@@ -23,10 +33,21 @@
 *.tar
 *.zip
 
+### Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
 ### Logs & Databases ###
 *.log
 *.sql
 *.sqlite
+.ipynb_checkpoints
+.ropeproject
+__pycache__
 
 ### OS Generated Files ###
 *.out
