--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,29 @@
 
 # Maintainer:   jeffskinnerbox@yahoo.com / www.jeffskinnerbox.me
-# Version:      1.1.0
+# Version:      1.1.1
 #
 # DESCRIPTION:
-# This file specifies intentionally untracked files that Git should ignore.
+#    This file specifies intentionally untracked files that Git should ignore.
 #
-# Each line in this .gitignore file specifies a regular expression pattern
-# that, when matched, the coresponding file will NOT be include in Git processing.
+#    Each line in this .gitignore file specifies a regular expression pattern
+#    that, when matched, the coresponding file will NOT be include in Git processing.
+#
+# DOCUMENTATION:
+#    Somebasic rules to help you to set up your .gitignore file correctly:
+#
+#      * Any line that starts with a hash (#) is a comment.
+#      * The \ character escapes special characters.
+#      * The / character means that the rule applies only to files and folders located in the same folder.
+#      * An asterisk (*) means any number of characters (zero or more).
+#      * Two asterisks (**) specify any number of subdirectories.
+#      * A question mark (?) replaces zero or one character.
+#      * An exclamation sign (!) designates the inversion rule
+#        (i.e., it includes any file that was excluded by a previous pattern).
+#      * Blank lines are ignored, so you can use them to add space and make your file easier to read.
+#      * Adding / on the end ignores entire directory paths.
+#
+# SOURCE:
+# https://git-scm.com/docs/gitignore
 
 
 ### --------------------------- Project Specific --------------------------- ###
