--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,9 @@ htmlcov/
 nosetests.xml
 coverage.xml
 
-### Files containing secrets
-secret*
-secrets*
+### Header files containing secrets
+secret.h
+secrets.h
 
 ### Logs & Databases ###
 *.log
